# sr2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md
installers/: brotli.py  expat.py  jsoncpp.py  libarchive.py  lz4.py  lzma.py  nghttp2.py  openssl.py  package_helpers.py  zlib_ng.py  zstd.py
sr2/: CMakeLists.txt
sr2/components/: AddressLoader.cpp  AddressLoader.hpp  CURLStarter.cpp  CURLStarter.hpp  Chunk.cpp  Chunk.hpp  Downloader.cpp  Downloader.hpp  FileHandler.cpp  FileHandler.hpp  RawBuffer.cpp  RawBuffer.hpp  Samples.cpp  Samples.hpp
sr2/src/: Helper.cpp  Helper.hpp  Version.cxx.in  Version.hpp  entry.cpp
